CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)
project(Assignments)

add_executable(hw5_2 engineering_cad/hw5_2.cpp)
add_executable(hw5_3 engineering_cad/hw5_3.cpp)
add_executable(hw6_1 engineering_cad/hw6_1.cpp)
add_executable(hw6_2 engineering_cad/hw6_2.cpp)
add_executable(hw6_3 engineering_cad/hw6_3.cpp)